# thehubofheliopolis

./: .gitignore  .travis.yml  2020-09-17-haskell-monads.md  Gemfile  README.md  _config.yml  index.html  pelicanconf.py  publishconf.py  pyproject.toml  staticman.yml  tasks.py  z99_about.md
.github/workflows/: deploy.yml
_data/comments/: android-dev1508105030.yml  android-dev1516771681.yml  austin1573336149.yml  (+6 more)
_includes/: about.html  analytics.html  comment-reply.html  comment_form.html  comments.html  font-awesome.html  footer.html  head.html  header.html  icon-github.html  mathjax.html  post-info.html  read-time.html  read_time.html  social-bar.html  tagging.html
_layouts/: about.html  default.html  page.html  post.html
_plugins/: terminal.rb
_posts/: 2017-03-07-primes.md  2017-07-31-intro-to-iot.markdown  2017-08-10-getting-started-with-x68-asm.markdown  2017-10-14-android-dev.md  2018-03-03-websockets_asyncio.md  2018-03-24-asm_python.md  2018-08-04-containers.md  2019-05-05-python-profiling.md
_raw/: iot_schematic.fzz  ws_asyncio.fzz
_sass/: _base.scss  _comments.scss  _layout.scss  _normalize.scss  _post.scss  _syntax-highlighting.scss
content/: 2016-08-10-getting-started-with-x64-asm.md  2017-03-07-primes.md  2017-07-31-intro-to-iot.md  2017-10-14-android-dev.md  2018-03-03-websockets-asyncio.md  2018-03-24-asm-python.md  2018-08-04-containers.md  2019-05-05-python-profiling.md  2020-10-26-austin-tui-way.md  2021-01-23-avaloq.md  2021-06-22-bust-perf-issues.md  2021-09-27-python-kernel.md  2021-12-16-hacktoberfest2021.md  2021-12-17-austin-accuracy.md  2022-01-15-linux-first-encounter.md  2022-02-11-pytest-cunit.md
css/: main.scss
js/: highlight.js
script/: cibuild
(+8 files in other folders)
