# This file is part of "the-hub-of-heliopolis" which is released under GPL.
#
# See file LICENCE or go to http://www.gnu.org/licenses/ for full license
# details.
#
# the-hub-of-heliopolis is a Python wrapper around Austin, the CPython frame stack
# sampler.
#
# Copyright (c) 2018-2020 Gabriele N. Tornetta <phoenix1987@gmail.com>.
# All rights reserved.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

[tool.poetry]
name = "the-hub-of-heliopolis"
version = "0.1.0"
description = ""
license = "GPL-3.0-or-later"
authors = ["Gabriele N. Tornetta <phoenix1987@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/P403n1x87/the-hub-of-heliopolis"
repository = "https://github.com/P403n1x87/the-hub-of-heliopolis"
documentation = "https://the-hub-of-heliopolis.readthedocs.io"
keywords = []
classifiers = []

[tool.poetry.dependencies]
python = ">=3.6"
pelican = {extras = ["markdown"], version = "^4.5.0"}
pygments = "^2.7.4"
invoke = "^1.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
